Improvements made to UI and search Logic

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Country Finder | Async JS</title>
+    <title>Geo Finder | Async JS</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Space+Grotesk:wght@500;700&display=swap"
       rel="stylesheet"
@@ -19,7 +19,7 @@
   <body>
     <div class="container">
       <header>
-        <h1 class="logo">Country Finder</h1>
+        <h1 class="logo">Geo Finder</h1>
         <button class="theme-toggle" aria-label="Toggle dark mode">
           <i class="fa-solid fa-moon theme-icon"></i>
         </button>
