--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+      crossorigin=""
+    />
+
+    <script
+      src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+      crossorigin=""
+    ></script>
+
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
   </head>
@@ -20,9 +33,14 @@
     <div class="container">
       <header>
         <h1 class="logo">Geo Finder</h1>
-        <button class="theme-toggle" aria-label="Toggle dark mode">
-          <i class="fa-solid fa-moon theme-icon"></i>
-        </button>
+        <div class="header-controls">
+          <button class="btn-toggle-sidebar" aria-label="View History">
+            <i class="fa-solid fa-clock-rotate-left"></i>
+          </button>
+          <button class="theme-toggle" aria-label="Toggle dark mode">
+            <i class="fa-solid fa-moon theme-icon"></i>
+          </button>
+        </div>
       </header>
 
       <section class="search-section">
@@ -41,6 +59,9 @@
               aria-label="Country name"
               required
             />
+            <button type="button" class="btn-voice" aria-label="Voice Search">
+              <i class="fa-solid fa-microphone"></i>
+            </button>
           </div>
           <button
             class="btn btn-primary search-btn"
@@ -62,6 +83,34 @@
       <div class="loading" role="status" aria-live="polite"></div>
       <div class="countries" role="region" aria-label="Country results"></div>
     </div>
+
+    <div class="overlay"></div>
+
+    <aside class="sidebar">
+      <div class="sidebar-header">
+        <h2>Recent Searches</h2>
+        <button class="btn-close-sidebar">
+          <i class="fa-solid fa-xmark"></i>
+        </button>
+      </div>
+
+      <div class="sidebar-content">
+        <ul class="history-list"></ul>
+        <p class="empty-msg">No recent history</p>
+      </div>
+
+      <div class="sidebar-footer">
+        <button class="btn-clear-history">
+          <i class="fa-solid fa-trash"></i> Clear History
+        </button>
+      </div>
+    </aside>
+
+    <div class="map-modal hidden">
+      <button class="btn-close-map">&times;</button>
+      <div id="map"></div>
+    </div>
+    <div class="map-overlay hidden"></div>
 
     <div class="error-message" role="alert" aria-live="assertive"></div>
   </body>
