--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
 
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-YMZWVDWD2X"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-YMZWVDWD2X');
+    </script>
   </head>
   <body>
     <div class="container">
